--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 <p id="paragraph" style="font-family:Times New Roman; background-color:red;">y puedes ver una película</p>
 <img id="centered" src="https://i.ibb.co/FgtdfLc/pelicula.jpg"/>
 
-<p id="personal">Mi película favorito es Cube(1997)<img src="https://upload.wikimedia.org/wikipedia/en/0/0c/Cube_The_Movie_Poster_Art.jpg"/></p>
+<p id="personal">Mi película favorito es Cube(1997)<img style="width:20%; padding-right:200px;"src="https://m.media-amazon.com/images/M/MV5BYmQ1MDQ0MGQtZjFkNC00NGM2LWEzMDgtY2RjNzE1ZWE0OGE3XkEyXkFqcGdeQXVyODc0OTEyNDU@._V1_FMjpg_UX1000_.jpg"/> <img src="https://m.media-amazon.com/images/M/MV5BMTI0NjExMjA3NF5BMl5BanBnXkFtZTYwOTE2MDM5._V1_.jpg"/></p>
 <br>
 <br>
 <p style="font-family:Times New Roman; font-size:30px; padding-bottom:300px; background-image:url(https://upload.wikimedia.org/wikipedia/commons/9/94/Tomato_passata.jpg);">y puedes comer en la Old Spaghetti Factory. <img id="centerImage" src="https://i.ibb.co/XbSyYHZ/osf.jpg"/> <marquee behavior="scroll" direction="left" scrollamount="600">
